kubernetes-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-dev
  namespace: model-dev
spec:
  type: NodePort
  selector:
    app: model-dev
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30800
      protocol: TCP
